# aoc2021

./: README.md  aoc2021.cabal  flake.nix
.github/workflows/: nix.yml  release.yml
app/: Day1.hs  Day2.hs  Day3.hs  Main.hs
