cabal-version: 2.4
name:          aoc2021
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021

executable aoc2021
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:      Day1
  ghc-options:        -Wall -Werror=incomplete-patterns
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    TypeApplications
    ViewPatterns

  build-depends:
    , advent-of-code
    , base            ^>=4.14.1.0
    , comonad
    , containers
    , lens
    , text
    , text-show
