cabal-version: 2.4
name:          aoc2021
version:       0.3.3.2
synopsis:      Advent of Code 2021 Solutions
description:   Personal solutions to the AoC 2021 challenges
category:      Web
license:       ISC
license-file:  LICENSE
homepage:      https://github.com/pnotequalnp/aoc2021
bug-reports:   https://github.com/pnotequalnp/aoc2021/issues
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021-2022

source-repository head
  type: git
  location: https://github.com/pnotequalnp/aoc2021

executable aoc2021
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  other-modules:
    Day1
    Day2
    Day3
    Paths_aoc2021

  autogen-modules:
    Paths_aoc2021

  ghc-options:
    -Wall -Wcompat -Werror=incomplete-patterns
    -fno-show-valid-hole-fits -Wno-unticked-promoted-constructors

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    TypeApplications
    ViewPatterns

  build-depends:
    , advent-of-code  ^>=0.2.1
    , base            >=4.14.1.0 && <5.0
    , comonad         ^>=5.0.8
    , containers      ^>=0.6.5
    , lens            ^>=4.19.2
    , text            ^>=1.2.4
    , text-show       ^>=3.9.2
